[gd_scene load_steps=10 format=3 uid="uid://ie51y3aop0ic"]

[ext_resource type="Theme" uid="uid://cuni2uykhtop2" path="res://scenes/Login/Style_LoginMenu.tres" id="1_bw5jn"]
[ext_resource type="Script" path="res://scenes/MenuMgr.gd" id="1_oxab6"]
[ext_resource type="Script" path="res://scenes/Login/PFP.gd" id="3_55exe"]
[ext_resource type="Script" path="res://scenes/Login/LoginMgr.gd" id="3_r5mcu"]
[ext_resource type="Script" path="res://scenes/Login/PlayerInfo.gd" id="3_u6q21"]
[ext_resource type="Texture2D" uid="uid://ctqpagudoane4" path="res://data/Customization/PFP/default.png" id="4_sc352"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cxcd"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12xi5"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_2pvae"]

[node name="Root_Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_bw5jn")
script = ExtResource("1_oxab6")
metadata/_edit_horizontal_guides_ = []
metadata/_edit_vertical_guides_ = [1081.0]

[node name="Quit" type="Button" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_bottom = 26.0
grow_horizontal = 0
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67451, 0.419608, 0.454902, 1)

[node name="HTTP_Login" type="HTTPRequest" parent="."]

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
clip_tabs = false

[node name="Customization" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="PlayerInfo" type="Panel" parent="TabContainer/Customization"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 341.0
offset_bottom = 156.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7cxcd")
script = ExtResource("3_u6q21")

[node name="PFP" type="Panel" parent="TabContainer/Customization/PlayerInfo"]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 265.0
offset_bottom = 267.0
scale = Vector2(0.3, 0.3)
theme_override_styles/panel = SubResource("StyleBoxFlat_12xi5")
script = ExtResource("3_55exe")

[node name="TextureRect" type="TextureRect" parent="TabContainer/Customization/PlayerInfo/PFP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_sc352")

[node name="OptionButton" type="OptionButton" parent="TabContainer/Customization/PlayerInfo/PFP"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 0
allow_reselect = true

[node name="LE_DisplayName" type="LineEdit" parent="TabContainer/Customization/PlayerInfo"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -10.0
offset_right = -8.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "aaaaaaaaaaaaaaaa"

[node name="Label" type="Label" parent="TabContainer/Customization/PlayerInfo/LE_DisplayName"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_top = -24.0
offset_right = 73.5
grow_horizontal = 2
text = "Display Name"

[node name="Btn_Custom_Save" type="Button" parent="TabContainer/Customization/PlayerInfo"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -26.0
offset_right = -9.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
text = "Save"

[node name="Account" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="TabContainer/Account"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -142.5
offset_bottom = 134.5
grow_horizontal = 2
grow_vertical = 2

[node name="Btn_Logout" type="Button" parent="TabContainer/Account/Panel"]
layout_mode = 2
offset_top = 136.0
offset_right = 4.0
offset_bottom = 140.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Login" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2pvae")
script = ExtResource("3_r5mcu")

[node name="Panel" type="Panel" parent="Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Login/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = 102.0
offset_right = -140.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Login/Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Login/Panel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LE_Username" type="LineEdit" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
max_length = 16

[node name="LE_Password" type="LineEdit" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
max_length = 16
secret = true

[node name="ErrorRect" type="ColorRect" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
color = Color(0.478431, 0.329412, 0.380392, 1)

[node name="Label" type="Label" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/ErrorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.980392, 0, 0.360784, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Login Error Message Here"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 32

[node name="Btn_Login" type="Button" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Login"

[node name="Btn_Register" type="Button" parent="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[node name="HTTP_Test" type="Button" parent="Login/Panel/PanelContainer"]
visible = false
layout_mode = 2
disabled = true
text = "Test URL Request"

[connection signal="pressed" from="Quit" to="." method="_btn_quit"]
[connection signal="request_completed" from="HTTP_Login" to="Login" method="HTTP_Request"]
[connection signal="item_selected" from="TabContainer/Customization/PlayerInfo/PFP/OptionButton" to="TabContainer/Customization/PlayerInfo/PFP" method="_On_PFP_Option_Set"]
[connection signal="pressed" from="TabContainer/Customization/PlayerInfo/Btn_Custom_Save" to="TabContainer/Customization/PlayerInfo" method="_on_Save"]
[connection signal="text_changed" from="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/LE_Username" to="Login" method="_OnUsernameEntered"]
[connection signal="text_changed" from="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/LE_Password" to="Login" method="_OnPasswordEntered"]
[connection signal="pressed" from="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Btn_Login" to="Login" method="_on_btn_login_pressed"]
[connection signal="pressed" from="Login/Panel/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Btn_Register" to="Login" method="_on_btn_register_pressed"]
[connection signal="pressed" from="Login/Panel/PanelContainer/HTTP_Test" to="." method="_on_http_test_pressed"]
